--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "async-validator": "^4.0.2",
+    "mobx": "^6.3.13",
     "rc-util": "^5.8.0"
   },
   "devDependencies": {
